--- a/front__end/src/App.css
+++ b/front__end/src/App.css
@@ -15,3 +15,22 @@
   transition: border-bottom 1s ease-in-out !important;
   margin-top: 5px;
 }
+
+.ReceiptAddBtn {
+  float: right;
+}
+
+.ModalStyle {
+  position: absolute;
+  padding: 3px;
+  border: 1px solid;
+  background-color: white;
+  width: 95%;
+  top: 25%;
+  left: 2.5%;
+  height: 50%;
+}
+
+#NumInputstyle {
+  width: 85px;
+}
