--- a/front__end/src/App.css
+++ b/front__end/src/App.css
@@ -17,8 +17,11 @@
 }
 
 .ReceiptAddBtn {
-  float: right;
+  z-index: 99;
+  position: absolute;
+  right: 0;
 }
+
 
 .ModalStyle {
   position: absolute;
@@ -31,6 +34,21 @@
   height: 50%;
 }
 
-#NumInputstyle {
+.NumInputstyle {
   width: 85px;
+}
+
+.NavBar {
+  margin-top:10px;
+}
+
+.SnackbarClass {
+  margin-top: 30px;
+}
+
+
+
+.ImgStyle {
+  width: 100%;
+  height: 100%;
 }
