fixed bug so you cannot update records with a blank value,added autosuggested address to update property page

--- a/front__end/src/App.css
+++ b/front__end/src/App.css
@@ -64,3 +64,15 @@
 	text-align: center;
 }
 
+
+.PropUpdateModal {
+  position: absolute;
+  padding: 3px;
+  border: 1px solid;
+  background-color: white;
+  width: 95%;
+  top: 25%;
+  left: 2.5%;
+  height: 70%;
+}
+
