--- a/Tenant_Front_end/src/App.css
+++ b/Tenant_Front_end/src/App.css
@@ -10,117 +10,58 @@
 }
 
 .navbar__link--active {
-  color: red !important;
+  color: green !important;
   border-bottom: 3px solid #29b6f6 !important;
   transition: border-bottom 1s ease-in-out !important;
   margin-top: 5px;
-}
-
-.ReceiptAddBtn {
-  z-index: 99;
-  position: absolute;
-  right: 0;
-}
-
-
-.ModalStyle {
-  position: absolute;
-  padding: 3px;
-  border: 1px solid;
-  background-color: white;
-  width: 95%;
-  top: 25%;
-  left: 2.5%;
-  height: 50%;
-}
-
-.NumInputstyle {
-  width: 85px;
-}
-
-.NavBar {
-  margin-top:10px;
-}
-
-.SnackbarClass {
-  margin-top: 30px;
-}
-
-
-
-.ImgStyle {
-  width: 100%;
-  height: 100%;
-}
-
-
-.NoReceipt {
-  margin-top:25px;
-
-}
-
-
-.CheckOutSecc {
-	text-align: center;
-}
-
-
-.PropUpdateModal {
-  position: absolute;
-  padding: 3px;
-  border: 1px solid;
-  background-color: white;
-  width: 95%;
-  top: 25%;
-  left: 2.5%;
-  height: 70%;
-}
-
-
-
-
-.CenterAlignText{
-  text-align: center;
-
-}
-
-.box1 {
-  background: linear-gradient(45deg, #fe6b8b 30%, #ff8e53 90%);
-}
-
-.box2 {
-  background: linear-gradient(45deg, #6a11cb, #2575fc) !important;
-}
-.box3 {
-  background: linear-gradient(45deg, #fc4a1a, #f7b733) !important;
-}
-.box4 {
-  background: linear-gradient(45deg, #ee0979, #ff6a00) !important;
-}
-
-.GenBoxCss {
-  height: 100%;
-  border-radius: 10;
-  color: white !important;
-  margin-right: 10px;
 }
 
 .CenterText {
   text-align: center;
 }
 
-.TextRight {
-  text-align: right;
-  color: white !important;
+.center {
+  margin: 0 auto;
+  text-align: center;
 }
 
-
-.Center {
-  margin-left: auto;
-  margin-right: auto;
-
+.CardHeight {
+  height: 95%;
+  margin: 10px;
+  text-align: center;
 }
 
-.TextWrap {
-  overflow-wrap: break-word;
+.CardHeight .ButtonStyle {
+  background-color: green;
+  color: white;
+  margin: 2px;
+}
+
+.MuiButton-contained {
+  background-color: green;
+  color: white;
+  margin: 2px;
+}
+
+.CardHeight p {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.MuiTypography-h5 {
+  border-bottom: 1px solid black;
+  text-align: left;
+}
+
+.MuiAvatar-root {
+  margin: auto;
+}
+
+.CardHeight .CardBackground {
+  background-color: #f2f2f2;
+}
+
+.CardHeight .NewsContentStyle {
+  margin-left: 5px;
+  margin-top: 5px;
 }
