--- a/LandLord_front_end/src/App.css
+++ b/LandLord_front_end/src/App.css
@@ -23,11 +23,10 @@
 }
 
 .ProgessCircle {
-    display: inline;
-    float: right;
-    position: absolute;
+  display: inline;
+  float: right;
+  position: absolute;
 }
-
 
 .ModalStyle {
   position: absolute;
@@ -44,32 +43,22 @@
   width: 85px;
 }
 
-.NavBar {
-  margin-top:10px;
-}
-
 .SnackbarClass {
   margin-top: 30px;
 }
-
-
 
 .ImgStyle {
   width: 100%;
   height: 100%;
 }
 
-
 .NoReceipt {
-  margin-top:25px;
-
+  margin-top: 25px;
 }
-
 
 .CheckOutSecc {
-	text-align: center;
+  text-align: center;
 }
-
 
 .PropUpdateModal {
   position: absolute;
@@ -82,12 +71,8 @@
   height: 70%;
 }
 
-
-
-
-.CenterAlignText{
+.CenterAlignText {
   text-align: center;
-
 }
 
 .box1 {
@@ -120,11 +105,9 @@
   color: white !important;
 }
 
-
 .Center {
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .TextWrap {
@@ -134,7 +117,7 @@
 .CenterChart {
   position: absolute;
   top: 30%;
-  color:white;
+  color: white;
   left: 0;
   right: 0;
   text-align: center;
@@ -148,7 +131,6 @@
   width: 400px;
   height: 400px;
 }
-
 
 .CenterText {
   text-align: center;
@@ -220,11 +202,8 @@
 }
 
 .WelcomeBackStyle {
-  margin-left:auto
-
+  margin-left: auto;
 }
 .WelcomeBackStyle2 {
-  margin-right:auto
-
+  margin-right: auto;
 }
-
