--- a/Tenant_Front_end/src/App.css
+++ b/Tenant_Front_end/src/App.css
@@ -114,7 +114,7 @@
 }
 
 .MonthRentIconStyle {
-  margin-bottom: -5px;
+  margin-bottom: 5px !important;
 }
 
 input,
@@ -135,6 +135,10 @@ input,
 
 input::placeholder {
   color: #aab7c4;
+}
+
+.MonthRentIconStyle {
+  margin-bottom: -5px;
 }
 
 input:focus,
@@ -170,4 +174,8 @@ input:focus,
 
 .StyleToolTip {
   font-size: 15px;
+}
+
+.DisabledTextfield {
+  color: #707070 !important;
 }
